# markdowndocs

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci-linting.yaml  ci-regression-tests.yaml  ci-unit-tests.yaml
examples/: class_and_functions.md  class_and_private_functions.md  code_documentation.md  multiple_functions.md  multiple_modules.md
markdowndocs/: cli.py  constants.py  md_utils.py  mddocs.py
tests/: test_markdowndocs.py  test_md_utils.py
tests/expected_output/: class_and_functions.md  class_and_private_functions.md  code_documentation.md  multiple_functions.md  multiple_modules.md  one_function.md
tests/test_cases/: class_and_functions.py  class_and_private_functions.py  function_with_import_statements.py  multiple_functions.py  one_function.py
