[tool.poetry]
name = "markdowndocs"
version = "0.1.0"
description = "A light-weight markdown documentation generator that generates a simple .md file that documents your Python code based on your docstrings and source code."
authors = ["Niels D. Goet <ndgoet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.9.0"
pandas = "^1.1.2"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # Specific to Black
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "setup.py:version",
    "pyproject.toml:version",
    "markdowndocs/__init__.py"
]
